added room_number to model queueline, also added to endpoints for dressingroom actions.

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,9 @@ flask-cors = "*"
 flask-restful = "*"
 sqlalchemy-serializer = "*"
 bcrypt = "*"
+flask-session = "*"
+jwt = "*"
+pyjwt = "*"
 
 [dev-packages]
 
